# HindsightBot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.toml  start.sh
agents/: investigator.py  scheduler.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 001_initial_schema.py
docs/superpowers/plans/: 2026-03-17-hindsightbot.md
docs/superpowers/specs/: 2026-03-17-hindsightbot-design.md
scripts/: download_tailwind.sh
web/: auth.py  main.py
web/templates/: base.html
web/templates/admin/: _bulk_result.html  _investigate_btn.html  _seed_result.html  index.html
web/templates/public/: _prediction_detail.html  index.html
worker/: main.py
